<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUsuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnAtras"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:contentDescription="@string/desc"
                android:onClick="Atras"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24"
                tools:ignore="UsingOnClickInXml" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/round_btns_form"
                android:contentDescription="@string/desc"
                app:srcCompat="@drawable/ic_baseline_add_a_photo_24" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/generalInfo"
                android:textColor="@color/azul_uno"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombreUser"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:autofillHints=""
                android:background="@drawable/input_texts"
                android:ems="10"
                android:hint="@string/inputNombre"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gris" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtApellidoPaterno"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_texts"
                android:ems="10"
                android:hint="@string/inputApellidoPaterno"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gris"
                android:importantForAutofill="no" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtapellidoMaterno"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_texts"
                android:ems="10"
                android:hint="@string/inputApellidoMaterno"
                android:inputType="textPersonName"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gris"
                android:importantForAutofill="no" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtSexo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:hint="@string/inputSexo"
                android:textColorHint="@color/gris">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_txt"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:background="@drawable/input_texts"
                    android:ems="10"
                    android:inputType="none"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtFechaNacimiento"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_texts"
                android:ems="10"
                android:hint="@string/fechaNacimiento"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gris"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/infoNacimiento"
                android:textColor="@color/azul_uno"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPesoNacer"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_texts"
                android:ems="10"
                android:hint="@string/pesoNacer"
                android:inputType="numberDecimal"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gris"
                android:importantForAutofill="no" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEdadGestal"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_texts"
                android:ems="10"
                android:hint="@string/edadGestal"
                android:inputType="text"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gris"
                android:importantForAutofill="no" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtTipoSangre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:hint="@string/tipoSangre"
                android:textColorHint="@color/gris">

                <AutoCompleteTextView
                    android:id="@+id/auto_complete_txtSangre"
                    android:layout_width="350dp"
                    android:layout_height="50dp"
                    android:background="@drawable/input_texts"
                    android:ems="10"
                    android:inputType="none"
                    android:paddingStart="15dp"
                    android:paddingEnd="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="25dp"
                android:layout_marginTop="25dp"
                android:text="@string/infoInicioSesion"
                android:textColor="@color/azul_uno"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registroMail"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_texts"
                android:ems="10"
                android:hint="@string/inputEmail"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gris" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/registroContra"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/input_texts"
                android:ems="10"
                android:hint="@string/inputPassword"
                android:inputType="textPassword"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/gris"
                android:importantForAutofill="no" />

            <Button
                android:id="@+id/registrarse"
                android:layout_width="350dp"
                android:layout_height="65dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/btns_form"
                android:text="@string/btnRegistrarse"
                android:textSize="20sp"
                android:onClick="Registrarse"
                tools:ignore="UsingOnClickInXml"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>