<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicio">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:orientation="vertical"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:src="@drawable/ic_baseline_local_hospital_24" />

            <Button
                android:id="@+id/vacunaUno"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:drawableEnd="@drawable/ic_round_arrow_forward_ios_24"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/vacunaCombinada"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_local_hospital_24" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:drawableEnd="@drawable/ic_round_arrow_forward_ios_24"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/vacunaDos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_baseline_local_hospital_24" />

            <Button
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:drawableEnd="@drawable/ic_round_arrow_forward_ios_24"
                android:paddingStart="5dp"
                android:paddingEnd="10dp"
                android:text="@string/vacunaDos"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>



    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/incio_bottom_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/azul_uno"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        app:menu="@menu/menu_bottom_bar" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/inicio_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/azul_uno"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="center"
        app:menu="@menu/munu_toolbar"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        app:subtitle="@string/subtitleVacunas"
        app:title="@string/vacunas" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>